# cxon

./: .gitignore  .travis.yml  LICENSE  MANUAL.md  README.md  cxon.hxx  makefile  pretty.hxx
.github/workflows/: benchmarks.yml  codacy.yml  codecov.yml  codeql.yml  coverity.yml  cxon.yml  linux.yml  macos.yml  test.yml  time.yml  windows.yml
cxjson/: MANUAL.md  README.md  cxjson.hxx  pretty.hxx
doc/: README.md
example/: README.md  cxcf-ex01.cxx  format-traits-ex01.cxx  format-traits-ex02.cxx  json-rpc.cxx  makefile  named-parameters-ex01.cxx  overriding-default-serializers.cxx  std-types-ex01.cxx  std-types-ex02.cxx  std-types-ex04.cxx  user-types-ex01.cxx  user-types-ex02.cxx
examples/: README.md  common-interface.cxx  cxcf-ex01.cxx  format-traits-ex01.cxx  json-rpc.cxx  makefile  std-types-ex03.cxx
src/cxon/: README.md  cbor.hxx  cxcf.hxx  cxon.hxx  json.hxx  lang-fwd.hxx  map.hxx  pretty.hxx  queue.hxx  unordered_map.hxx  unordered_set.hxx  utility.hxx
src/cxon/bits/: charconv.hxx  cxon.hxx  map.hxx
src/cxon/core/: compound.hxx  fundamental.hxx  utility.hxx
src/cxon/cxjson/: MANUAL.md  README.md  cxjson.hxx  pretty.hxx
src/cxon/lang/: fundamental.hxx
src/cxon/lang/cbor/: README.md  cbor-fwd.hxx  cbor.hxx  class.hxx  compound.hxx  enum.hxx  error.hxx  fundamental.hxx  node.hxx
src/cxon/lang/cbor/common/: container.hxx  sink.hxx  tag.hxx
src/cxon/lang/cbor/node/: README.md  node.hxx
src/cxon/lang/common/: allocator.hxx  charclass.hxx  charconv.hxx  chario.hxx  container.hxx  cxon.hxx  hash.hxx  node-value.hxx
src/cxon/lang/common/bio/: bio.hxx  io.hxx
src/cxon/lang/common/bits/: chario.hxx  container.hxx
src/cxon/lang/common/chario/: chario.hxx  chars.hxx  chcls.hxx  chio.hxx  container.hxx  cxon.hxx  enums.hxx  key.hxx  numbers.hxx  strings.hxx  structs.hxx  unquoted-value.hxx
src/cxon/lang/common/chio/: char.hxx  chars.hxx  chcls.hxx  chio.hxx  class.hxx  container.hxx  enum.hxx  enums.hxx  error-fwd.hxx  error.hxx  errors.hxx  io.hxx  key.hxx  numbers.hxx  numeric.hxx  (+5 more)
src/cxon/lang/cxcf/: README.md  cxcf-fwd.hxx  cxcf.hxx
src/cxon/lang/json/: README.md  class.hxx  compound.hxx  enum.hxx  error.hxx  fundamental.hxx  json-fwd.hxx  json.hxx  node.hxx  struct.hxx  tidy.hxx
src/cxon/lib/: node.cbor.hxx  node.hxx  node.json.hxx  node.ordered.hxx
src/cxon/lib/boost/: dynamic_bitset.hxx  variant.hxx  variant2.hxx
src/cxon/lib/std/: array.hxx  bitset.hxx  chrono.hxx  complex.hxx  deque.hxx  flat_map.hxx  flat_set.hxx  forward_list.hxx  list.hxx  map.hxx  memory.hxx  optional.hxx  queue.hxx  set.hxx  span.hxx  stack.hxx  string.hxx  string_view.hxx  tuple.hxx  unordered_map.hxx  unordered_set.hxx  utility.hxx  valarray.hxx  variant.hxx  vector.hxx
src/cxon/std/: array.hxx  bitset.hxx  chrono.hxx  complex.hxx  deque.hxx  forward_list.hxx  list.hxx  map.hxx  optional.hxx  queue.hxx  set.hxx  stack.hxx  string.hxx  string_view.hxx  tuple.hxx  unordered_map.hxx  unordered_set.hxx  utility.hxx  valarray.hxx  variant.hxx  vector.hxx
src/cxon/std/bits/: map.hxx  set.hxx
test/: .gitignore  CMakeLists.txt  README.md  benchmark-space.sh  cmake.sh  cov.sh  cxjson.cxx  cxon.compound.cxx  cxon.cxx  cxon.fundamental.cxx  cxon.hxx  cxon.json.compound.cxx  cxon.json.cxx  cxon.json.fundamental.cxx  cxon.json.hxx  cxon.json.node.cxx  cxon.json.node.pretty.hxx  cxon.json.std.cxx  cxon.std.cxx  lcov.sh  makefile  pretty.hxx  strutl.hxx
test/data/: set.1-fail.in  set.1-pass.in  set.2-fail.in  set.2-pass.in  set.4-diff.in
test/data/cbor/: round-trip.in  set.1.in  test-vector.in  tests.cf  time.in
test/data/cbor/set.1/: README.md
test/data/json/: set.1-fail.in  set.1-pass.in  set.2-fail.in  set.2-pass.in  set.3-diff.in  set.4-diff.in  set.5-diff.in  tests.cf  time-s2.in  time.in
test/data/json/set.1/: README.md
test/data/json/set.2/: README.md
test/data/json/set.5/: README.md
test/data/json/set.6/: LICENSE  README.md  random-array.json  random-bool.json  random-fp32.json  random-fp64.json  random-null.json  random-object.json  random-s16.json  random-s32.json  random-s64.json  random-s8.json  random-u16.json  random-u32.json  random-u64.json  random-u8.json
test/data/set.1/: README.md
test/data/set.2/: README.md
test/data/set.3/: README.md
test/data/set.4/: README.md
test/json/: compound.cxx  fundamental.cxx  json.cxx  node.cxx  node.ordered.hxx  ordered.object.hxx  std.cxx
test/src/: node.ordered.hxx  pretty.hxx  test.hxx  utility.hxx
test/src/cbor/: cbor.boost.container.cxx  cbor.boost.cxx  cbor.cbor.cxx  cbor.compound.cxx  cbor.core-boost.cxx  cbor.core-compound.cxx  cbor.core-fundamental.cxx  cbor.core-main.cxx  cbor.core-std.cxx  cbor.cxx  cbor.fundamental.cxx  cbor.node-main.cxx  cbor.node-self.cxx  cbor.node.cxx  cbor.node.hxx  cbor.node.self.cxx  cbor.std.cxx  compound.cxx  fundamental.cxx  std.cxx
test/src/json/: compound.cxx  fundamental.cxx  json.boost.container.cxx  json.boost.cxx  json.compound.cxx  json.core-boost.cxx  json.core-compound.cxx  json.core-fundamental.cxx  json.core-main.cxx  json.core-std.cxx  json.core.compound.cxx  json.core.json.cxx  json.cxx  json.fundamental.cxx  json.json.cxx  json.node-diff.cxx  json.node-main.cxx  json.node-self.cxx  json.node-time.boost.cxx  json.node-time.hxx  json.node-time.native-apache_builds.hxx  json.node-time.native-blns.hxx  json.node-time.native-canada.hxx  json.node-time.native-citm_catalog.hxx  json.node-time.native-emoji.hxx  json.node-time.native-github_events.hxx  json.node-time.native-gsoc_2018.hxx  json.node-time.native-instruments.hxx  json.node-time.native-marine_ik.hxx  json.node-time.native-mesh.hxx  json.node-time.native-numbers.hxx  json.node-time.native-random.hxx  json.node-time.native-synth.hxx  json.node-time.native-twitter.hxx  json.node-time.native-update_center.hxx  json.node-time.native.cxx  json.node-time.native.hxx  json.node-time.nlohmann.cxx  json.node-time.node.cxx  json.node-time.rapidjson.cxx  (+18 more)
test/src/json/space/: boost.json.cxx  cxon.native.c0.cxx  cxon.native.c1.cxx  cxon.native.c2.cxx  cxon.node.cxx  nlohmann.json.cxx  rapidjson.cxx
(+126 files in other folders)
